fixed carousel comment

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </section>
 
       <!-- Carousel Section -->
-      <!-- <section class="carousel-body">
+      <section class="carousel-body">
         <div class="carousel-container">
-          <!-- Navigation Buttons -->
+          <!-- Carousel Navigation Buttons -->
           <div class="carousel-buttons">
             <button id="prev-btn" class="carousel-nav">❮</button>
             <button id="next-btn" class="carousel-nav">❯</button>
@@ -46,20 +46,19 @@
               <img src="./assets/img-1.png" alt="Image 1" />
               <p>Magnetic core bobbin</p>
             </div>
-
             <div class="carousel-item">
               <img src="./assets/img-3.png" alt="Image 4" />
               <p>Premium stabilizer</p>
             </div>
             <div class="carousel-item">
               <img src="./assets/img-4.jpeg" alt="Image 4" />
-              <p>RECOMMENDED ITEM</p>
+              <p>Recommended Item</p>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- Grid section -->
+      <!-- Featured section -->
       <section class="grid-section">
         <p class="grid-title">Featured Products</p>
         <div class="grid-container">
